src/App.css
.container {
    height: 100vh;
}
.wrapper {
    width: 100%;
    padding: 1.5em 0;
    background-color: #464444;
    border-radius: 10px;
}
.wrap {
    position: relative;
    width: 80%;
}
.wrap button {
    position: absolute;
    right: 0;
    top: 0;
    background-color: orange;
    height: 100%;
    padding: 0.5em 1em;
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
}
.wrap button.copied {
    background-color: green;

}
.wrap input {
    border-radius: 5px;
    width: 100%;
}
.row:nth-child(3) .col:nth-child(1) {
    flex-direction: column;
}

@media screen and (max-width: 540px) {
    .row:nth-child(3) {
        flex-direction: column;
    }
    label {
        font-size: 0.8em;
    }
}

